[package]
name = "pinocchio-amm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
constant-product-curve = { git = "https://github.com/deanmlittle/constant-product-curve", version = "0.1.0" }
pinocchio = "0.10.2"
pinocchio-associated-token-account = "0.3.0"
pinocchio-system = "0.5.0"
pinocchio-token = "0.5.0"
solana-address = {version = "2.2.0", features = ["curve25519"]}
solana-program-log = "1.1.0"
